--- a/server/emailfooterserverui.html
+++ b/server/emailfooterserverui.html
@@ -30,15 +30,15 @@
 
             <form id="card-form" class="space-y-4">
                 <div>
-                    <label for="name" class="block text-sm font-medium text-gray-300">Full Name</label>
-                    <input type="text" id="name" name="name" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
+                    <label for="name" class="block text-sm font-medium text-gray-300">Full Name (max length 26)</label>
+                    <input type="text" id="name" name="name" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" maxlength="26">
                 </div>
                 <div>
                     <label for="pronouns" class="block text-sm font-medium text-gray-300">Pronouns (Optional)</label>
                     <input type="text" id="pronouns" name="pronouns" class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
                 </div>
                 <div>
-                    <label for="title" class="block text-sm font-medium text-gray-300">Job Title</label>
+                    <label for="title" class="block text-sm font-medium text-gray-300">Job Title (36 chars. max)</label>
                     <input type="text" id="title" name="title" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" maxlength="36">
                 </div>
                 <div>
@@ -46,7 +46,7 @@
                     <input type="text" id="company" name="company" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" value="Shasta County Office of Education">
                 </div>
                 <div>
-                    <label for="address" class="block text-sm font-medium text-gray-300">Address</label>
+                    <label for="address" class="block text-sm font-medium text-gray-300">Full Address including city, state and zip</label>
                     <input type="text" id="address" name="address" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
                 </div>
                 <div>
