--- a/server/emailfooterserverui.html
+++ b/server/emailfooterserverui.html
@@ -25,30 +25,51 @@
     <div class="container bg-gray-800 p-8 rounded-xl shadow-lg flex flex-col md:flex-row gap-8">
         <!-- Form Section -->
         <div class="w-full md:w-1/2">
-            <h1 class="text-3xl font-bold mb-6 text-gray-100">Create Your eMail Signature Image</h1>
-            <p class="text-gray-400 mb-6">Fill out the form below to generate a new eMail signature image. The card will be created in real time based on your input.</p>
+            <h1 class="text-3xl font-bold mb-6 text-gray-100">Create Your Business Card</h1>
+            <p class="text-gray-400 mb-6">Fill out the form below to generate a new business card image. The card will be created in real time based on your input.</p>
 
             <form id="card-form" class="space-y-4">
                 <div>
-                    <label for="name" class="block text-sm font-medium text-gray-300">Full Name (max length 26)</label>
-                    <input type="text" id="name" name="name" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" maxlength="26">
+                    <label for="name" class="block text-sm font-medium text-gray-300">Full Name</label>
+                    <input type="text" id="name" name="name" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
                 </div>
                 <div>
                     <label for="pronouns" class="block text-sm font-medium text-gray-300">Pronouns (Optional)</label>
                     <input type="text" id="pronouns" name="pronouns" class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
                 </div>
                 <div>
-                    <label for="title" class="block text-sm font-medium text-gray-300">Job Title (36 chars. max)</label>
-                    <input type="text" id="title" name="title" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" maxlength="36">
+                    <label for="title" class="block text-sm font-medium text-gray-300">Job Title</label>
+                    <select id="title" name="title" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
+                        <option value="">--Please choose an option--</option>
+                        <option value="UX Designer">UX Designer</option>
+                        <option value="Product Manager">Product Manager</option>
+                        <option value="Software Engineer">Software Engineer</option>
+                        <option value="Data Scientist">Data Scientist</option>
+                        <option value="Marketing Specialist">Marketing Specialist</option>
+                    </select>
                 </div>
                 <div>
                     <label for="company" class="block text-sm font-medium text-gray-300">Company</label>
-                    <input type="text" id="company" name="company" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" value="Shasta County Office of Education">
+                    <input type="text" id="company" name="company" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" value="Your Default Company Name">
                 </div>
                 <div>
-                    <label for="address" class="block text-sm font-medium text-gray-300">Full Address including city, state and zip</label>
+                    <label for="department" class="block text-sm font-medium text-gray-300">Department (Optional)</label>
+                    <input type="text" id="department" name="department" class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
+                </div>
+                <div>
+                    <label for="address" class="block text-sm font-medium text-gray-300">Address</label>
                     <input type="text" id="address" name="address" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
                 </div>
+                
+                <!-- Land Grant Statement -->
+                <div class="space-y-2">
+                    <label class="block text-sm font-medium text-gray-300">Land Grant Statement (Optional, up to 4 lines)</label>
+                    <input type="text" id="land_grant_1" name="land_grant_1" class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" placeholder="Line 1">
+                    <input type="text" id="land_grant_2" name="land_grant_2" class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" placeholder="Line 2">
+                    <input type="text" id="land_grant_3" name="land_grant_3" class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" placeholder="Line 3">
+                    <input type="text" id="land_grant_4" name="land_grant_4" class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2" placeholder="Line 4">
+                </div>
+
                 <div>
                     <label for="phone_number" class="block text-sm font-medium text-gray-300">Phone Number</label>
                     <input type="tel" id="phone_number" name="phone_number" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
@@ -58,17 +79,17 @@
                     <input type="email" id="email" name="email" required class="mt-1 block w-full rounded-md bg-gray-700 text-gray-100 border-gray-600 focus:ring-orange-500 focus:border-orange-500 px-3 py-2">
                 </div>
 
-                <div id="loading-indicator" class="text-center text-orange-400 font-semibold">Generating signature image...</div>
+                <div id="loading-indicator" class="text-center text-orange-400 font-semibold">Generating card...</div>
                 <button type="submit" class="w-full bg-orange-600 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded-md transition duration-200">
-                    Generate Signature Image
+                    Generate Card
                 </button>
             </form>
         </div>
 
         <!-- Image Display Section -->
         <div class="w-full md:w-1/2 flex flex-col items-center justify-center bg-gray-700 rounded-lg p-6">
-            <h2 class="text-2xl font-semibold mb-4 text-gray-200">Your eMail Signature</h2>
-            <img id="business-card" src="https://placehold.co/600x350/1f2937/d1d5db?text=Your+card+will+appear+here" alt="Generated eMail Signature" class="w-full h-auto rounded-md shadow-lg border-2 border-gray-600">
+            <h2 class="text-2xl font-semibold mb-4 text-gray-200">Your Business Card</h2>
+            <img id="business-card" src="https://placehold.co/600x350/1f2937/d1d5db?text=Your+card+will+appear+here" alt="Generated Business Card" class="w-full h-auto rounded-md shadow-lg border-2 border-gray-600">
         </div>
     </div>
 
